style: Change cdn

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,6 +14,7 @@
     <meta name="theme-color" content="##1d1f21">
     <link rel="manifest" href="/manifest.json">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/gitalk/dist/gitalk.css" rel="stylesheet">
     <style>
       #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
       #skip a:focus {  position:static;  width:auto;  height:auto;  }
